# energyhub

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
energyhub/: README.md  alembic.ini  pyproject.toml
energyhub/alembic/: env.py  script.py.mako
energyhub/alembic/versions/: 2026_07_12_1200-0001_initial_schema.py  2026_07_12_1201-0002_negotiations.py  2026_07_12_1202-0003_financial.py  2026_07_12_1203-0004_audit_logs.py  2026_07_12_1204-0005_notifications_reports.py  2026_07_12_1205-0006_additional_indexes.py  2026_07_12_1206-0007_constraints.py  2026_07_12_1207-0008_seed_data.py  2026_07_12_1208-0009_seed_permission_catalog.py  2026_07_12_1209-0010_seed_cache_manage_permission.py  2026_07_13_1000-0011_admin_password_rotation.py
energyhub/src/energyhub/: main.py
energyhub/src/energyhub/audit/application/dto/: audit_log_request_dto.py  audit_log_response_dto.py
energyhub/src/energyhub/audit/application/mapper/: audit_log_mapper.py
energyhub/src/energyhub/audit/domain/entity/: audit_log.py
energyhub/src/energyhub/audit/domain/exception/: audit_log_not_found_exception.py
energyhub/src/energyhub/audit/infrastructure/persistence/: audit_log_repository.py
energyhub/src/energyhub/audit/presentation/router/: audit_log_router.py
energyhub/src/energyhub/auth/: __init__.py
energyhub/src/energyhub/auth/application/dto/: login_request_dto.py  login_response_dto.py  permission_request_dto.py  permission_response_dto.py  role_request_dto.py  role_response_dto.py  user_request_dto.py  user_response_dto.py
energyhub/src/energyhub/auth/application/mapper/: permission_mapper.py
energyhub/src/energyhub/auth/application/service/: permission_service.py  role_service.py  user_service.py
energyhub/src/energyhub/auth/domain/: auth_aggregate.py
energyhub/src/energyhub/auth/domain/entity/: permission.py  role.py  user.py
energyhub/src/energyhub/auth/domain/exception/: invalid_credentials_exception.py  permission_already_exists_exception.py  permission_not_found_exception.py  role_already_exists_exception.py  role_not_found_exception.py  user_already_exists_exception.py  user_not_found_exception.py
energyhub/src/energyhub/auth/infrastructure/persistence/: role_repository.py
energyhub/src/energyhub/auth/infrastructure/security/: current_user.py  jwt_service.py
energyhub/src/energyhub/auth/presentation/exception/: invalid_credentials_exception_handler.py
energyhub/src/energyhub/auth/presentation/router/: auth_router.py  (+3 more)
energyhub/src/energyhub/clients/domain/: client_aggregate.py
energyhub/src/energyhub/config/: __init__.py  security_guard.py  settings.py
energyhub/src/energyhub/config/dependencies/: __init__.py
energyhub/src/energyhub/financial/: __init__.py
energyhub/src/energyhub/financial/domain/: financial_aggregate.py
energyhub/src/energyhub/negotiations/: __init__.py
energyhub/src/energyhub/negotiations/domain/: negotiation_aggregate.py
energyhub/src/energyhub/notifications/: __init__.py
energyhub/src/energyhub/reports/: __init__.py
energyhub/src/energyhub/shared/constant/: cache_constants.py  permissions.py
energyhub/src/energyhub/shared/util/: string_utils.py  validation_utils.py
energyhub/tests/: conftest.py  test_base_entity.py  test_persistence.py  test_search.py
energyhub/tests/audit/application/service/: test_audit_log_service.py
energyhub/tests/audit/presentation/router/: test_audit_log_router.py
energyhub/tests/auth/application/service/: test_authentication_service.py  test_permission_service.py  test_role_service.py  test_user_service.py
energyhub/tests/auth/domain/entity/: test_auth_entities.py
energyhub/tests/auth/presentation/router/: test_auth_router.py  test_permission_router.py  test_role_router.py  test_user_router.py
energyhub/tests/clients/application/service/: test_client_service.py  test_contact_service.py
energyhub/tests/clients/infrastructure/persistence/: test_client_repository.py
energyhub/tests/clients/presentation/router/: test_client_router.py  test_client_router_component.py  test_client_search_router.py
energyhub/tests/config/: test_security_guard.py
energyhub/tests/contracts/application/service/: test_contract_service.py
energyhub/tests/contracts/domain/entity/: test_contract_entity.py
energyhub/tests/contracts/presentation/router/: test_contract_router.py
energyhub/tests/financial/application/service/: test_invoice_service.py  test_payment_service.py
energyhub/tests/financial/presentation/router/: test_financial_router.py
energyhub/tests/negotiations/application/service/: test_energy_transaction_service.py  test_negotiation_service.py
energyhub/tests/negotiations/presentation/router/: test_negotiation_router.py
energyhub/tests/notifications/application/service/: test_notification_service.py
energyhub/tests/notifications/presentation/router/: test_notification_router.py
energyhub/tests/reports/application/service/: test_report_service.py
energyhub/tests/reports/presentation/router/: test_report_router.py
energyhub/tests/shared/application/dto/: test_page.py
energyhub/tests/shared/application/validation/: test_validators.py
energyhub/tests/shared/domain/entity/: test_base_entity_equality.py  test_entities_validation.py
energyhub/tests/shared/domain/exception/: test_domain_exceptions.py
energyhub/tests/shared/domain/valueobject/: test_value_objects.py
energyhub/tests/shared/infrastructure/messaging/: test_publish_helper.py
energyhub/tests/shared/infrastructure/metrics/: test_metrics.py
energyhub/tests/shared/infrastructure/security/: test_security.py
energyhub/tests/shared/presentation/exception/: test_exception_handlers.py
energyhub/tests/shared/presentation/router/: test_cache_router.py
energyhub/tests/shared/util/: test_utils.py
services/financial-service/: Dockerfile  pyproject.toml
services/financial-service/src/energyhub/: config.py  discovery.py  main.py
services/financial-service/src/energyhub/service_clients/: auth_client.py  base.py  client_client.py  contract_client.py
(+720 files in other folders)
