[project]
name = "energyhub"
version = "0.1.0"
description = ""
authors = [
    {name = "SiquaraDev",email = "matheus.siquara99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.poetry]
packages = [{include = "energyhub", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.20,<0.16.0)"
]
