[project]
name = "energyhub"
version = "0.1.0"
description = "Energy Trading Platform"
authors = [
    {name = "SiquaraDev",email = "matheus.siquara99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]

[tool.poetry]
packages = [{include = "energyhub", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Mapeamento imperativo (Fase 5): as entidades de domínio são dataclasses puras, então o mypy
# não enxerga os atributos instrumentados pelo SQLAlchemy (ex.: em runtime `User.username` vira
# um ColumnElement). Nas queries dos repositórios/filtros isso gera falsos positivos [misc]/
# [arg-type]. Silenciados APENAS na camada de persistência, que é validada por testes de
# integração contra o banco real; o restante do código segue sob mypy estrito.
[[tool.mypy.overrides]]
module = "energyhub.*.infrastructure.persistence.*"
disable_error_code = ["misc", "arg-type", "return-value", "attr-defined", "no-any-return"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# O projeto adota a convenção de nomes *Exception (definida nas specs: DomainException,
# ApplicationException, etc.) em vez do sufixo *Error exigido por N818.
ignore = ["N818"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
