[project]
name = "energyhub"
version = "0.1.0"
description = "Energy Trading Platform"
authors = [
    {name = "SiquaraDev",email = "matheus.siquara99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.1.0,<5.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "redis (>=4.6.0,<5.0.0)",
    "fastapi-cache2[redis] (>=0.2.0,<0.3.0)",
    "jinja2 (>=3.1.0,<4.0.0)",
    "aio-pika (>=9.4.0,<10.0.0)",
    "aiokafka (>=0.11.0,<0.13.0)",
    "elasticsearch (>=8.0.0,<9.0.0)",
    "elasticsearch-dsl (>=8.0.0,<9.0.0)"
]

[tool.poetry]
packages = [{include = "energyhub", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Mapeamento imperativo (Fase 5): as entidades de domínio são dataclasses puras, então o mypy
# não enxerga os atributos instrumentados pelo SQLAlchemy (ex.: em runtime `User.username` vira
# um ColumnElement). Nas queries dos repositórios/filtros isso gera falsos positivos [misc]/
# [arg-type]. Silenciados APENAS na camada de persistência, que é validada por testes de
# integração contra o banco real; o restante do código segue sob mypy estrito.
[[tool.mypy.overrides]]
module = "energyhub.*.infrastructure.persistence.*"
disable_error_code = ["misc", "arg-type", "return-value", "attr-defined", "no-any-return"]

# `python-jose` não publica stubs de tipos (nem `py.typed`); ignoramos a ausência de tipos da lib.
# As funções `jwt.encode/decode` retornam `Any` — os tipos de retorno são fixados no `JwtService`.
[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

# `redis` (redis-py 4.6) não expõe stubs reconhecidos pelo mypy (import-untyped).
[[tool.mypy.overrides]]
module = ["redis.*"]
ignore_missing_imports = true

# `aiokafka` (Fase 10) não publica stubs de tipos reconhecidos pelo mypy (import-untyped); os
# tipos são fixados nos wrappers `KafkaConfig`/`KafkaEventProducer`/`KafkaEventConsumer`.
[[tool.mypy.overrides]]
module = ["aiokafka.*"]
ignore_missing_imports = true

# `elasticsearch-dsl` (Fase 11) não expõe `py.typed` (import-untyped); os tipos são fixados nos
# documentos/repositórios/serviço de busca. O cliente `elasticsearch` em si é tipado.
[[tool.mypy.overrides]]
module = ["elasticsearch_dsl.*"]
ignore_missing_imports = true

# Cache (Fase 9): o decorador `@cache` do fastapi-cache2 tipa o retorno como `T | Response` (para
# uso em endpoints). Nos métodos de serviço decorados isso vaza para os routers finos, que apenas
# repassam o resultado (validado pelo `response_model` do FastAPI). Silenciado APENAS o
# [return-value] na camada de routers; o restante segue sob mypy estrito.
[[tool.mypy.overrides]]
module = "energyhub.*.presentation.router.*"
disable_error_code = ["return-value"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# O projeto adota a convenção de nomes *Exception (definida nas specs: DomainException,
# ApplicationException, etc.) em vez do sufixo *Error exigido por N818.
ignore = ["N818"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
