[project]
name = "financial-service"
version = "0.15.0"
description = "EnergyHub — Financial microservice (invoices + payments)"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "redis (>=4.6.0,<5.0.0)",
    "fastapi-cache2[redis] (>=0.2.0,<0.3.0)",
    "jinja2 (>=3.1.0,<4.0.0)",
    "aio-pika (>=9.4.0,<10.0.0)",
    "aiokafka (>=0.11.0,<0.13.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.0.0,<10.0.0)"
]

[tool.poetry]
packages = [{include = "energyhub", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
